--- a/client/resizer_app/src/index.css
+++ b/client/resizer_app/src/index.css
@@ -7,19 +7,20 @@ body {
 /* container for multiple apps */
 .app-container {
   display: flex;
-  flex-wrap: wrap;          /* allows wrapping if screen is small */
-  gap: 20px;                /* space between apps */
-  justify-content: center;  /* center them horizontally */
+  flex-wrap: wrap;         
+  gap: 20px;              
+  justify-content: center; 
   padding: 40px;
-  align-items: flex-start;  /* keep tops aligned */
+  align-items: flex-start; 
 }
 
 /* make each app look like a card */
 .app-container > div {
-  background: white;
+  background: rgb(240, 56, 56);
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 800px; /* each box size */
+  height: 700px;
+  width: 80%; 
   box-sizing: border-box;
 }
